--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
         </ol>
         <div class="tab"><i class="fa fa-plug fa-inverse" aria-hidden="true"></i>Sign Out</div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.0.0.min.js" integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="main.js"></script>
 </body>
 
