created hidden class, used jquery to toggle between adding and removing class

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="tab"><i class="fa fa-inbox fa-inverse" aria-hidden="true"></i>My Files
-            <div class="counter">495</div>
+            <div class="tabCounter">495</div>
         </div>
         <ol>
             <li>
@@ -37,10 +37,10 @@
             </li>
         </ol>
         <div class="tab"><i class="fa fa-envelope-o fa-inverse" aria-hidden="true"></i>Mail
-            <div class="counter">26</div>
+            <div class="tabCounter">26</div>
         </div>
         <div class="tab"><i class="fa fa-cloud fa-inverse" aria-hidden="true"></i>Cloud
-            <div class="counter">58</div>
+            <div class="tabCounter">58</div>
         </div>
         <ol>
             <li>
