changed toggleClass hidden to slide up

--- a/index.html
+++ b/index.html
@@ -16,24 +16,24 @@
         <ol>
             <li>
                 <div class="content">Dropbox
-                    <div class="counter"></div>42</div>
+                    <div class="counter">42</div></div>
 
             </li>
             <li>
                 <div class="content">Skydrive
-                    <div class="counter"></div>87</div>
+                    <div class="counter">87</div></div>
             </li>
             <li>
                 <div class="content">FTP Server
-                    <div class="counter"></div>366</div>
+                    <div class="counter">366</div></div>
             </li>
             <li>
                 <div class="content">DropBox
-                    <div class="counter"></div>1</div>
+                    <div class="counter">1</div></div>
             </li>
             <li>
                 <div class="content">Skydrive
-                    <div class="counter"></div>10</div>
+                    <div class="counter">10</div></div>
             </li>
         </ol>
         <div class="tab"><i class="fa fa-envelope-o fa-inverse" aria-hidden="true"></i>Mail
