--- a/index.html
+++ b/index.html
@@ -9,73 +9,51 @@
 </head>
 
 <body>
-    <div class="container">
-        <div class="tab"><i class="fa fa-inbox fa-inverse" aria-hidden="true"></i>My Files
-            <div class="tabCounter">495</div>
-        </div>
-        <ol>
-            <li>
-                <div class="content">Dropbox
-                    <div class="counter">42</div></div>
+  <div class="container">
 
-            </li>
-            <li>
-                <div class="content">Skydrive
-                    <div class="counter">87</div></div>
-            </li>
-            <li>
-                <div class="content">FTP Server
-                    <div class="counter">366</div></div>
-            </li>
-            <li>
-                <div class="content">DropBox
-                    <div class="counter">1</div></div>
-            </li>
-            <li>
-                <div class="content">Skydrive
-                    <div class="counter">10</div></div>
-            </li>
-        </ol>
-        <div class="tab"><i class="fa fa-envelope-o fa-inverse" aria-hidden="true"></i>Mail
-            <div class="tabCounter">26</div>
+
+    <div class="tab">
+        <div class="topTab">
+            <i class="fa fa-inbox fa-inverse" aria-hidden="true"></i>MyFiles
+            <div class="topTabCounter">495</div>
         </div>
-        <div class="tab"><i class="fa fa-cloud fa-inverse" aria-hidden="true"></i>Cloud
-            <div class="tabCounter">58</div>
-        </div>
+
         <ol>
-            <li>
-                <div class="content">Connect
-                    <div class="counter">12</div>
-                </div>
-            </li>
-            <li>
-                <div class="content">Profiles
-                    <div class="counter">19</div>
-                </div>
-            </li>
-            <li>
-                <div class="content">Options
-                    <div class="counter">27</div>
-                </div>
-            </li>
-            <li>
-                <div class="content">Connect
-                    <div class="counter">12</div>
-                </div>
-            </li>
-            <li>
-                <div class="content">Profiles
-                    <div class="counter">19</div>
-                </div>
-            </li>
-            <li>
-                <div class="content">Options
-                    <div class="counter">27</div>
-                </div>
-            </li>
+          <li>Dropbox<div class="counter">42</div></li>
+          <li>Skydrive<div class="counter">877</div></li>
+          <li>FTP Server<div class="counter">366</div></li>
+          <li>Dropbox<div class="counter">1</div></li>
+          <li>Skydrive<div class="counter">10</div></li>
         </ol>
-        <div class="tab"><i class="fa fa-plug fa-inverse" aria-hidden="true"></i>Sign Out</div>
     </div>
+    <div class="tab">
+        <div class="topTab">
+            <i class="fa fa-envelope-o fa-inverse" aria-hidden="true"></i>Mail
+            <div class="topTabCounter">26</div>
+        </div>
+    </div>
+    <div class="tab">
+        <div class="topTab">
+            <i class="fa fa-cloud fa-inverse" aria-hidden="true"></i>Cloud
+            <div class="topTabCounter">58</div>
+        </div>
+
+        <ol>
+          <li>Connect<div class="counter">12</div></li>
+          <li>Profiles<div class="counter">19</div></li>
+          <li>Options<div class="counter">27</div></li>
+          <li>Connect<div class="counter">12</div></li>
+          <li>Profiles<div class="counter">19</div></li>
+          <li>Options<div class="counter">27</div></li>
+        </ol>
+    </div>
+    <div class="tab">
+        <div class="topTab">
+            <i class="fa fa-plug fa-inverse" aria-hidden="true"></i>Sign Out
+        </div>
+    </div>
+
+</div>
     <script src="https://code.jquery.com/jquery-3.0.0.min.js" integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="main.js"></script>
 </body>
