got ols to show when their parent was clicked on.  Still need to create accordion effect

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
   <div class="container">
 
 
-    <div class="tab">
+    <div class="tab" id="myFiles">
         <div class="topTab">
             <i class="fa fa-inbox fa-inverse" aria-hidden="true"></i>MyFiles
             <div class="topTabCounter">495</div>
         </div>
 
-        <ol>
+        <ol class="hidden">
           <li>Dropbox<div class="counter">42</div></li>
           <li>Skydrive<div class="counter">877</div></li>
           <li>FTP Server<div class="counter">366</div></li>
@@ -26,19 +26,19 @@
           <li>Skydrive<div class="counter">10</div></li>
         </ol>
     </div>
-    <div class="tab">
+    <div class="tab" id="mail">
         <div class="topTab">
             <i class="fa fa-envelope-o fa-inverse" aria-hidden="true"></i>Mail
             <div class="topTabCounter">26</div>
         </div>
     </div>
-    <div class="tab">
+    <div class="tab" id="cloud">
         <div class="topTab">
             <i class="fa fa-cloud fa-inverse" aria-hidden="true"></i>Cloud
             <div class="topTabCounter">58</div>
         </div>
 
-        <ol>
+        <ol class="hidden">
           <li>Connect<div class="counter">12</div></li>
           <li>Profiles<div class="counter">19</div></li>
           <li>Options<div class="counter">27</div></li>
@@ -47,7 +47,7 @@
           <li>Options<div class="counter">27</div></li>
         </ol>
     </div>
-    <div class="tab">
+    <div class="tab" id="signOut">
         <div class="topTab">
             <i class="fa fa-plug fa-inverse" aria-hidden="true"></i>Sign Out
         </div>
